# haiku-gitea-runner

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  config.yaml.example
.gitea/workflows/: ci.yml  release.yml
haiku-packaging/: act_runner.recipe  app_icon.rdef  gen_icon.py
haiku-packaging/launch_daemon/: act_runner  act_runner-launch.sh  act_runner.launch  act_runner.launch.template  install-service.sh
proto/: runner.proto
scripts/: README.md  e2e_smoke.sh  gitea_up.sh
scripts/workflows/: artifact-roundtrip.yml  cache-roundtrip.yml  checkout.yml  hello.yml  matrix.yml  needs.yml
src/: main.cpp
src/action/: ActionRunner.cpp  ActionRunner.h
src/cache/: CacheServer.cpp  CacheServer.h
src/client/: GiteaClient.cpp  GiteaClient.h  IRunnerClient.h  LocalRunnerClient.h  RunnerClient.cpp  RunnerClient.h  RunnerDtos.h
src/config/: Config.cpp  Config.h  RunnerState.cpp  RunnerState.h
src/process/: EnvManager.cpp  EnvManager.h  ProcessSpawner.cpp  ProcessSpawner.h
src/runner/: JobGraph.cpp  JobGraph.h  LogForwarder.cpp  LogForwarder.h  Poller.cpp  Poller.h  StepRunner.cpp  StepRunner.h  TaskExecutor.cpp  TaskExecutor.h  WorkflowOrchestrator.cpp  WorkflowOrchestrator.h
src/util/: Logger.cpp  Logger.h
src/workflow/: ContextBuilder.cpp  ContextBuilder.h  ExprEvaluator.cpp  ExprEvaluator.h  MatrixExpander.cpp  MatrixExpander.h  WorkflowParser.cpp  WorkflowParser.h
tests/: MockRunnerClient.h  test_action_runner.cpp  test_cache_server.cpp  test_context_builder.cpp  test_env_manager.cpp  test_expr_evaluator.cpp  test_job_graph.cpp  test_main_cli.cpp  test_matrix_expander.cpp  test_poller.cpp  test_process_spawner.cpp  test_runner.h  test_runner_client.cpp  test_task_executor.cpp  test_workflow_orchestrator.cpp  test_workflow_parser.cpp
